--- a/skyrl-tx/pyproject.toml
+++ b/skyrl-tx/pyproject.toml
@@ -3,9 +3,9 @@ requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "tx"
+name = "skyrl-tx"
 dynamic = ["version"]
-description = "Cross-platform neural network training"
+description = "Unified API for training and inference"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
