[tx] Support token weights  (#400)
Add support for user-provided token weights.

---------

Co-authored-by: Philipp Moritz <pcmoritz@gmail.com>

--- a/skyrl-tx/pyproject.toml
+++ b/skyrl-tx/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "typer>=0.17.4",
     # "wandb>=0.22.0",
     "peft",
+    "hf_transfer",
 ]
 
 [project.optional-dependencies]
