--- a/.github/workflows/cpu_skyrl_tx.yaml
+++ b/.github/workflows/cpu_skyrl_tx.yaml
@@ -1,22 +1,33 @@
-name: pytest
+name: SkyRL-tx-CPU
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ main ]
+    paths:
+      - 'skyrl-tx/**'
+      - '.github/workflows/cpu_skyrl_tx.yaml'
   pull_request:
-    branches: [ "main" ]
-
-env:
-  CI: 1
+    paths:
+      - 'skyrl-tx/**'
+      - '.github/workflows/cpu_skyrl_tx.yaml'
+  workflow_dispatch:
 
 permissions:
+  checks: write   # for status checks to appear
   contents: read
 
+# Cancel runs for previous commits on the same branch
+concurrency:
+  group: skyrl-tx-${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
-  build:
-
+  skyrl_tx_tests:
     runs-on: ubuntu-latest
-
+    defaults:
+      run:
+        shell: bash
+        working-directory: ./skyrl-tx
     steps:
     - uses: actions/checkout@v4
     - name: Install uv
