LoRA support for FSDP (#340)
## What does this PR do?
This PR adds LoRA (Low-Rank Adaptation) support for fine-tuning under
FSDP + vLLM setups. Right now we use save LoRA adapters on disk during
training and reload them for inference synchronization.

## Example Training Run 
Qwen2.5-0.5B-Instruct model on GSM8K dataset
<img width="1057" height="273" alt="image"
src="https://github.com/user-attachments/assets/e4416050-14d1-42f3-843b-6f4931076e96"
/>

## TODO
1. Does not yet support DeepSpeed, Megatron, or SGLang (to be added in
future updtes).
2. Not yet support in-memory adapter weight sync 
3. Support vllm sleep_level=2

---------

Co-authored-by: Tyler Griggs <131809874+tyler-griggs@users.noreply.github.com>
Co-authored-by: Sumanth R Hegde <39546518+SumanthRH@users.noreply.github.com>

--- a/skyrl-train/skyrl_train/config/ppo_base_config.yaml
+++ b/skyrl-train/skyrl_train/config/ppo_base_config.yaml
@@ -26,6 +26,11 @@ trainer:
   policy:
     model:
       path: "Qwen/Qwen2.5-1.5B-Instruct"
+      lora:
+          rank: 0
+          alpha: 16
+          dropout: 0
+          lora_sync_path: "/tmp/skyrl_lora_sync"
     deepspeed_config: ${deepspeed_config.train}
     optimizer_config:
       lr: 1.0e-6
@@ -54,6 +59,10 @@ trainer:
   critic:
     model:
       path: null
+      lora:
+        rank: 0
+        alpha: 16
+        dropout: 0
     deepspeed_config: ${deepspeed_config.train}
     optimizer_config:
       lr: 5.0e-6
@@ -144,6 +153,7 @@ trainer:
   flash_attn: true
   disable_fast_tokenizer: false
   target_modules: "all-linear"
+  exclude_modules: null
   project_name: "skyrl"
   run_name: "test_run"
   logger: "wandb"
