--- a/skyrl-train/examples/gsm8k/gsm8k-grpo-skypilot.yaml
+++ b/skyrl-train/examples/gsm8k/gsm8k-grpo-skypilot.yaml
@@ -1,7 +1,7 @@
-# Run this from skyrl-train directory.
+# Run this from the repository root after cloning SkyRL.
 resources:
   infra: aws           # replace this with what cloud you want to launch on
-  accelerators: L4:2   # every node has 2 L4 GPU
+  accelerators: L40S:4 # 4x 48 GB GPUs; adjust to the SKU that matches your quota
   memory: 64+          # every node has at least 64 GB memory
   ports: 6479          # expose port for ray dashboard
 # check the skypilot documentation for what clouds network tier is supported.
@@ -12,7 +12,7 @@ num_nodes: 1         # cluster size
 # --------------- Work Directory Synchronization (workdir) ---------------
 # Defines the local working directory to be synchronized to the remote cluster.
 # Here, '.' means synchronizing the directory where the sky submit command is currently run.
-# For this script, we assume it is in skyrl-train
+# For this script, run the command from the repository root after cloning SkyRL.
 workdir: .
 
 # --------------- (secrets) ---------------
@@ -30,21 +30,22 @@ secrets:
 #  # /remote/dir1/file: /local/dir1/file
 #  data/gsm8k: ~/data/gsm8k
 
-# --------------- Enviornment variables ---------------
+# --------------- Environment variables ---------------
 envs:
   LOGGER: "wandb"  # change to "console" to print to stdout
-
   INFERENCE_BACKEND: "vllm"
   # INFERENCE_BACKEND: "sglang"
+  # The quickstart configuration targets 4x 48 GB GPUs. On smaller GPUs, lower the
+  # micro batch sizes or switch to a smaller Qwen checkpoint per the Quickstart guide.
 
 
 # --------------- Environment Setup (setup) ---------------
 # Commands run on each node of the remote cluster to set up the environment (e.g., install dependencies). These are run directly inside Docker.
 setup: |
   cd skyrl-train
-  uv venv --python 3.12
+  uv venv --python 3.12 --seed
   source .venv/bin/activate
-  uv sync --extra vllm 
+  uv sync --extra vllm
   uv pip install wandb
   uv run -- python examples/gsm8k/gsm8k_dataset.py --output_dir $HOME/data/gsm8k
 
@@ -55,23 +56,39 @@ setup: |
 # This script will first start the Ray cluster (different ray start commands are executed on Head and Worker nodes).
 # Then, your training script will only be run on the Head node (SKYPILOT_NODE_RANK == 0).
 run: |
+  set -euo pipefail
+
   cd skyrl-train
   source .venv/bin/activate
 
-  sudo chmod 777 -R /var/tmp
+  TMP_DIR="$HOME/skyrl-tmp"
+  mkdir -p "$TMP_DIR"
+  export TMPDIR="$TMP_DIR"
 
-  head_ip="$(echo "$SKYPILOT_NODE_IPS" | head -n1 | awk '{print $1}')"
-  num_nodes="$(echo "$SKYPILOT_NODE_IPS" | wc -l | awk '{print $1}')"
+  read -r head_ip _ <<< "$SKYPILOT_NODE_IPS"
+  DATA_DIR="$HOME/data/gsm8k"
 
-  DATA_DIR=$HOME/data/gsm8k/
-
-  # login wandb
+  # Login to Weights & Biases once the secrets are available.
   uv run -- python3 -c "import wandb; wandb.login(relogin=True, key='$WANDB_API_KEY')"
 
+  wait_for_ray() {
+    local address=$1
+    for _ in $(seq 1 24); do
+      if ray status --address "$address" >/dev/null 2>&1; then
+        return 0
+      fi
+      sleep 5
+    done
+    echo "Ray cluster at $address failed to become ready" >&2
+    return 1
+  }
+
   export RAY_RUNTIME_ENV_HOOK=ray._private.runtime_env.uv_runtime_env_hook.hook
-  if [ "$SKYPILOT_NODE_RANK" == "0" ]; then
-    ps aux | grep ray | grep 6479 &> /dev/null || ray start --head  --disable-usage-stats --port 6479
-    sleep 15
+  if [ "$SKYPILOT_NODE_RANK" = "0" ]; then
+    if ! ray status --address 127.0.0.1:6479 >/dev/null 2>&1; then
+      ray start --head --disable-usage-stats --port 6479
+    fi
+    wait_for_ray 127.0.0.1:6479
     uv run --isolated --extra "$INFERENCE_BACKEND" -m skyrl_train.entrypoints.main_base \
       data.train_data="['${DATA_DIR}/train.parquet']" \
       data.val_data="['${DATA_DIR}/validation.parquet']" \
@@ -111,12 +128,12 @@ run: |
       trainer.project_name="gsm8k" \
       trainer.run_name="gsm8k_test" \
       trainer.resume_mode=null \
-      trainer.ckpt_path="$HOME/ckpts/gsm8k_1.5B_ckpt" &
+      trainer.ckpt_path="$HOME/ckpts/gsm8k_1.5B_ckpt"
   else
-    sleep 10
-    ps aux | grep ray | grep 6479 &> /dev/null || ray start --address $head_ip:6479 --disable-usage-stats
-    # Add sleep to after `ray start` to give ray enough time to daemonize 
-    sleep 15
+    if ! ray status --address "$head_ip:6479" >/dev/null 2>&1; then
+      ray start --address "$head_ip:6479" --disable-usage-stats
+    fi
+    wait_for_ray "$head_ip:6479"
   fi
 
   echo "Node setup and Ray start script finished for rank ${SKYPILOT_NODE_RANK}."
