--- a/skyrl-train/pyproject.toml
+++ b/skyrl-train/pyproject.toml
@@ -65,7 +65,7 @@ conflicts = [
 ]
 
 [tool.uv.sources]
-skyrl-gym = { path = "./skyrl-gym" , editable = true }
+skyrl-gym = { path = "../skyrl-gym" , editable = true }
 torch = { index = "pytorch-cu128" }
 torchvision = { index = "pytorch-cu128" }
 flash-attn = { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.0.post2/flash_attn-2.8.0.post2+cu12torch2.7cxx11abiFALSE-cp312-cp312-linux_x86_64.whl" }
