--- a/skyrl-train/pyproject.toml
+++ b/skyrl-train/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "skyrl-train"
-version = "0.1.0"
+version = "0.2.0"
 description = "skyrl-train"
 authors = [
     {name = "NovaSkyAI", email = "novasky.berkeley@gmail.com"}
@@ -76,6 +76,8 @@ flashinfer-python = [
     { url = "https://download.pytorch.org/whl/cu128/flashinfer/flashinfer_python-0.2.6.post1%2Bcu128torch2.7-cp39-abi3-linux_x86_64.whl", marker = "extra =='vllm'" }, 
     { url = "https://download.pytorch.org/whl/cu128/flashinfer/flashinfer_python-0.2.6.post1%2Bcu128torch2.7-cp39-abi3-linux_x86_64.whl", marker = "extra == 'sglang' and extra != 'vllm'" }
 ]
+# Custom vllm wheel for flashrl extra - built from commit 4b04dfc at https://github.com/SumanthRH/vllm/tree/flashrl
+flashrl-vllm = { url = "https://github.com/NovaSky-AI/SkyRL/releases/download/skyrl_train-v0.1.0/vllm-0.1.dev7509+gcc487699a.d20250821-cp312-cp312-linux_x86_64.whl" }
 
 
 [project.optional-dependencies]
@@ -128,13 +130,11 @@ mcore = [
   # uv pip install --no-build-isolation "transformer_engine[pytorch]==2.5.0" --verbose
   # "transformer-engine[pytorch]==2.5.0",
   "mbridge==0.15.1",
-  "megatron-core@git+https://github.com/NVIDIA/Megatron-LM.git@core_r0.13.0",
+  "megatron-core==0.13.0",
 ]
 flashrl = [
-    # TODO (sumanthrh): Shift to install from git source
-    # Currently, this is the wheel built for commit 4b04dfc at: https://github.com/SumanthRH/vllm/tree/flashrl
-    # Install from git source is currently defaulting to cpu build for some reason
-    "vllm @ https://github.com/NovaSky-AI/SkyRL/releases/download/skyrl_train-v0.1.0/vllm-0.1.dev7509+gcc487699a.d20250821-cp312-cp312-linux_x86_64.whl",
+    # NOTE: Flashrl requires a custom vLLM wheel.
+    "flashrl-vllm",
     "torch==2.7.0",
     "flashinfer-python",
     "torchvision",
