[tx] feat: let tinker checkpoints target cloud paths (#466)
*fixes #437*

Adds support for storing tinker checkpoints in cloud object stores
(AWS/GCP/Azure) using
[cloudpathlib](https://github.com/drivendataorg/cloudpathlib).

---

Tested with a modified pig latin training script against CloudFlare R2
(S3 compatible).

```py
...

save_path = training_client.save_weights_for_sampler(name="final").result().path
print(save_path)

with open("model-checkpoint.tar.gz", "wb") as f:
    f.write(rest_client.download_checkpoint_archive_from_tinker_path(f"tinker://{training_client.model_id}/sampler_weights/final").result())
```

```
AWS_ENDPOINT_URL=https://<...>.r2.cloudflarestorage.com \
    AWS_ACCESS_KEY_ID=<...> \
    AWS_SECRET_ACCESS_KEY=<...> \
    CHECKPOINTS_BASE_PATH=s3://<...>/checkpoints \
    uv run --extra tinker --extra gpu -m tx.tinker.api
```

```
SkyRL/skyrl-tx main  ? ❯ uv run python piglatin.py 
Loss per token: 6.7933
Loss per token: 6.4766
Loss per token: 5.8127
Loss per token: 5.0436
Loss per token: 4.2612
Loss per token: 3.5939
tinker://model_78a3f9c5/final

SkyRL/skyrl-tx main ? ❯ tar tvf model-checkpoint.tar.gz
-rw-r--r-- 0/0             804 2025-10-11 18:48 adapter_config.json
-rw-r--r-- 0/0        40415864 2025-10-11 18:48 adapter_model.safetensors
```

<img width="1453" height="218" alt="Screenshot 2025-10-11 at 7 23 12 PM"
src="https://github.com/user-attachments/assets/13278ff2-f1f7-4412-81cc-5980412caa73"
/>

---

Also tested locally

```
CHECKPOINTS_BASE_PATH=/tmp/tx_checkpoints \
    uv run --extra tinker --extra gpu -m tx.tinker.api
```

```
SkyRL/skyrl-tx feat/tinker-cloud-checkpoints ? ❯ uv run python piglatin.py 
Loss per token: 6.8108
Loss per token: 6.4627
Loss per token: 5.8067
Loss per token: 5.0007
Loss per token: 4.2140
Loss per token: 3.5998
tinker://model_d237eecf/final

SkyRL/skyrl-tx feat/tinker-cloud-checkpoints ? ❯ tar tvf model-checkpoint.tar.gz
-rw-r--r-- 0/0             804 2025-10-11 19:35 adapter_config.json
-rw-r--r-- 0/

--- a/skyrl-tx/pyproject.toml
+++ b/skyrl-tx/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     # "wandb>=0.22.0",
     "peft",
     "hf_transfer",
+    "cloudpathlib>=0.23.0",
 ]
 
 [project.optional-dependencies]
@@ -39,12 +40,25 @@ tinker = [
     "aiosqlite",
 ]
 
+aws = [
+    "cloudpathlib[s3]",
+]
+
+gcp = [
+    "cloudpathlib[gs]",
+]
+
+azure = [
+    "cloudpathlib[azure]",
+]
+
 dev = [
     "mkdocs",
     "mkdocs-material",
     "pytest",
     "torch",
     "ty",
+    "cloudpathlib[s3]",
 ]
 
 [tool.setuptools]
