[Docs] Skypilot: Multi-Node Test  (#493)
Test GSM8k with 2 node in Skypilot

---------

Co-authored-by: Andy Lee <andylizf@outlook.com>

--- a/skyrl-train/examples/gsm8k/gsm8k-grpo-skypilot.yaml
+++ b/skyrl-train/examples/gsm8k/gsm8k-grpo-skypilot.yaml
@@ -6,7 +6,7 @@ resources:
   ports: 6479          # expose port for ray dashboard
 #  network_tier: best # when using multiple nodes, communication can become a bottleneck
 
-num_nodes: 1         # cluster size
+num_nodes: 2         # cluster size
 
 # Set to a git repository 
 workdir:
@@ -21,7 +21,7 @@ envs:
   LOGGER: "wandb"  # change to "console" to print to stdout
   INFERENCE_BACKEND: "vllm"
   # INFERENCE_BACKEND: "sglang"
-
+  NUM_EPOCHS: 20
 
 # Commands run on each node of the remote cluster to set up the environment (e.g., install dependencies). These are run directly inside Docker.
 setup: |
@@ -71,6 +71,12 @@ run: |
       ray start --head --disable-usage-stats --port 6479
     fi
     wait_for_ray 127.0.0.1:6479
+    # Ensure rollout GPUs match policy GPUs when colocating all models.
+    # With colocate_all=true, we must have:
+    #   policy_num_gpus_per_node * policy_num_nodes ==
+    #   num_inference_engines * inference_engine_tensor_parallel_size * inference_engine_data_parallel_size
+    # Given TP=1 and DP=1, set num_inference_engines to total policy GPUs across the cluster.
+    TOTAL_POLICY_GPUS=$((SKYPILOT_NUM_GPUS_PER_NODE * SKYPILOT_NUM_NODES))
     uv run --isolated --extra "$INFERENCE_BACKEND" -m skyrl_train.entrypoints.main_base \
       data.train_data="['${DATA_DIR}/train.parquet']" \
       data.val_data="['${DATA_DIR}/validation.parquet']" \
@@ -82,17 +88,17 @@ run: |
       trainer.placement.ref_num_gpus_per_node="$SKYPILOT_NUM_GPUS_PER_NODE" \
       trainer.placement.ref_num_nodes="$SKYPILOT_NUM_NODES" \
       trainer.placement.policy_num_nodes="$SKYPILOT_NUM_NODES" \
-      generator.num_inference_engines="$SKYPILOT_NUM_GPUS_PER_NODE" \
+      generator.num_inference_engines="$TOTAL_POLICY_GPUS" \
       generator.inference_engine_tensor_parallel_size=1 \
-      trainer.epochs=20 \
+      trainer.epochs=${NUM_EPOCHS} \
       trainer.eval_batch_size=1024 \
       trainer.eval_before_train=true \
       trainer.eval_interval=5 \
       trainer.update_epochs_per_batch=1 \
       trainer.train_batch_size=1024 \
       trainer.policy_mini_batch_size=256 \
-      trainer.micro_forward_batch_size_per_gpu=64 \
-      trainer.micro_train_batch_size_per_gpu=64 \
+      trainer.micro_forward_batch_size_per_gpu=40 \
+      trainer.micro_train_batch_size_per_gpu=40 \
       trainer.ckpt_interval=10 \
       trainer.max_prompt_length=512 \
       generator.sampling_params.max_generate_length=1024 \
