[tx] Fix checkpoint downloading with tinker SDK >= 0.2.1

--- a/skyrl-tx/pyproject.toml
+++ b/skyrl-tx/pyproject.toml
@@ -33,7 +33,7 @@ tpu = [
 ]
 
 tinker = [
-    "tinker",
+    "tinker>=0.2.1",
     "fastapi[standard]",
     "sqlmodel",
     "sqlalchemy[asyncio]",
