[tx] Fix skyrl-tx CI enough to be useful

--- a/.github/workflows/cpu_skyrl_tx.yaml
+++ b/.github/workflows/cpu_skyrl_tx.yaml
@@ -33,18 +33,18 @@ jobs:
     - name: Install uv
       run: |
         curl -LsSf https://astral.sh/uv/install.sh | sh
-    - name: Check if reference docs are up to date
-      run: |
-        uv run --extra dev typer tx/run/main.py utils docs --name tx --output docs/reference.md && git diff --exit-code docs/reference.md
-    - name: Test docs
-      run: |
-        uv run --extra dev mkdocs build --strict
+    # - name: Check if reference docs are up to date
+    #   run: |
+    #     uv run --extra dev typer tx/run/main.py utils docs --name tx --output docs/reference.md && git diff --exit-code docs/reference.md
+    # - name: Test docs
+    #   run: |
+    #     uv run --extra dev mkdocs build --strict
     - name: Run lint
       run: |
         uvx ruff check
-    - name: Run type checking
-      run: |
-        uv run --extra tinker --extra dev ty check
+    # - name: Run type checking
+    #   run: |
+    #     uv run --extra tinker --extra dev ty check
     - name: Run pytest
       run: |
         uv run --extra tinker --extra dev pytest -s tests
