--- a/skyrl-train/pyproject.toml
+++ b/skyrl-train/pyproject.toml
@@ -61,6 +61,7 @@ conflicts = [
     ],
     [
         { extra = "mcore" },
+        { extra = "vllm" },
         { extra = "sglang" },
         { extra = "flashrl" },
     ]
@@ -70,13 +71,16 @@ conflicts = [
 skyrl-gym = { path = "./skyrl-gym" , editable = true }
 torch = { index = "pytorch-cu128" }
 torchvision = { index = "pytorch-cu128" }
-flash-attn = { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.0.post2/flash_attn-2.8.0.post2+cu12torch2.7cxx11abiFALSE-cp312-cp312-linux_x86_64.whl" }
-# NOTE (sumanthrh): We explictly use a flashinfer wheel from their index.
-# The wheels on PyPI don't come with pre-compiled kernels and the package will JIT compile them at runtime which is slow.
-# additionally, different inference engines may pin different compatible flashinfer versions, so we provide the option to pin different versions for vllm/sglang
+flash-attn = [
+    { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.7.4.post1/flash_attn-2.7.4.post1+cu12torch2.7cxx11abiFALSE-cp312-cp312-linux_x86_64.whl" , marker = "extra == 'mcore'"},
+    { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3+cu12torch2.8cxx11abiFALSE-cp312-cp312-linux_x86_64.whl", marker = "extra != 'mcore'" },
+]
+# We use `flashinfer-jit-cache` to avoid slow JIT compilation on first run.
+# Different inference engines may pin different compatible flashinfer versions, so we provide the option to pin different versions for vllm/sglang
+flashinfer-jit-cache = { index = "flashinfer-cu128", marker = "extra == 'vllm'" }
 flashinfer-python = [
-    { url = "https://download.pytorch.org/whl/cu128/flashinfer/flashinfer_python-0.2.6.post1%2Bcu128torch2.7-cp39-abi3-linux_x86_64.whl", marker = "extra =='vllm'" },
-    { url = "https://download.pytorch.org/whl/cu128/flashinfer/flashinfer_python-0.2.6.post1%2Bcu128torch2.7-cp39-abi3-linux_x86_64.whl", marker = "extra == 'sglang' and extra != 'vllm'" }
+    { url = "https://download.pytorch.org/whl/cu128/flashinfer/flashinfer_python-0.2.6.post1%2Bcu128torch2.7-cp39-abi3-linux_x86_64.whl", marker = "extra == 'mcore' and extra != 'vllm'" },
+    { url = "https://download.pytorch.org/whl/cu128/flashinfer/flashinfer_python-0.2.6.post1%2Bcu128torch2.7-cp39-abi3-linux_x86_64.whl", marker = "extra == 'sglang' and extra != 'mcore' and extra != 'vllm'" }
 ]
 
 [project.optional-dependencies]
@@ -104,9 +108,10 @@ sandboxes = [
     "litellm[proxy]>=1.67.5",
 ]
 vllm = [
-    "vllm==0.10.1.1",
-    "torch==2.7.1",
+    "vllm==0.11.0",
+    "torch==2.8.0",
     "flashinfer-python",
+    "flashinfer-jit-cache",
     "torchvision"
 ]
 sglang = [
@@ -126,6 +131,10 @@ mcore = [
   # export LD_LIBRARY_PATH="$CUDNN_PATH/lib:${LD_LIBRARY_PATH:-}"
   # uv pip install --no-build-isolation "transformer_engine[pytorch]==2.5.0" --verbose
   # "transformer-engine[pytorch]==2.5.0",
+  "vllm==0.10.1.1",
+  "torch==2.7.1",
+  "flashinfer-python",
+  "torchvision",
   "mbridge==0.15.1",
   "megatron-core==0.13.0",
 ]
@@ -146,6 +155,11 @@ miniswe = [
 [[tool.uv.index]]
 name = "pytorch-cu128"
 url = "https://download.pytorch.org/whl/cu128"
+explicit = true
+
+[[tool.uv.index]]
+name = "flashinfer-cu128"
+url = "https://flashinfer.ai/whl/cu128"
 explicit = true
 
 [tool.setuptools]
