Add implementation of CISPO loss (#523)
Did a quick test run on gsm8k with Qwen-2.5-0.5B. We seem to converge
quicker but the asymptote is roughly the same as PPO

<img width="1116" height="369" alt="Screenshot 2025-10-19 at 6 11 39 PM"
src="https://github.com/user-attachments/assets/31551591-2d40-43db-8597-fc1f480a6ae6"
/>

The CISPO-trained model does seem more verbose which might suggest that
"reflective tokens" are less suppressed and the model can reason for
longer, but policy entropy is actually lower than PPO, so I'm not sure.

<img width="1079" height="325" alt="Screenshot 2025-10-19 at 6 19 25 PM"
src="https://github.com/user-attachments/assets/d504c097-ba70-4f33-a70a-6eee672903d4"
/>
<img width="355" height="320" alt="Screenshot 2025-10-19 at 6 19 33 PM"
src="https://github.com/user-attachments/assets/0b7ef1e2-5cf2-41a4-899e-fb091fee5336"
/>

Full wandb report:
https://api.wandb.ai/links/bespoke-labs/de4bz2z5

---------

Co-authored-by: Eric Tang <erictang000@gmail.com>

--- a/skyrl-train/skyrl_train/config/ppo_base_config.yaml
+++ b/skyrl-train/skyrl_train/config/ppo_base_config.yaml
@@ -121,9 +121,16 @@ trainer:
       clip_cov_lb: 1.0 # lower bound for covariance clipping
       clip_cov_ub: 5.0 # upper bound for covariance clipping
     
+    # kl-cov parameters (only used when policy_loss_type: "kl_cov")
     kl_cov:
       kl_cov_frac: 0.2 # percentage of tokens to apply KL regularization to (20%)
       ppo_kl_coef: 1.0
+    
+    # cispo parameters (only used when policy_loss_type: "cispo")
+    cispo:
+      clip_low: 0.2 # lower bound for importance sampling ratio clipping
+      clip_high: 0.2 # upper bound for importance sampling ratio clipping
+
 
   gradient_checkpointing: true
   gradient_checkpointing_use_reentrant: false
