support pytorchenv in skyrl-gym

--- a/skyrl-gym/pyproject.toml
+++ b/skyrl-gym/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "pandas", 
     "requests",
     "omegaconf",
+    "openenv @ git+https://github.com/meta-pytorch/OpenEnv.git",
 ]
 
 [project.urls]
