--- a/skyrl-train/pyproject.toml
+++ b/skyrl-train/pyproject.toml
@@ -101,7 +101,7 @@ docs = [
 ]
 # TODO(tgriggs): Add `sandboxes` here once available as a package.
 sandboxes = [
-    "litellm[proxy]>=1.67.5",
+    "litellm>=1.75.5",
 ]
 vllm = [
     "vllm==0.10.1.1",
