add postgres database support

--- a/skyrl-tx/pyproject.toml
+++ b/skyrl-tx/pyproject.toml
@@ -39,6 +39,9 @@ tinker = [
     "sqlmodel",
     "sqlalchemy[asyncio]",
     "aiosqlite",
+    "asyncpg",
+    "psycopg2-binary",
+    "python-dotenv",
 ]
 
 aws = [
