--- a/skyrl-train/skyrl_train/config/ppo_base_config.yaml
+++ b/skyrl-train/skyrl_train/config/ppo_base_config.yaml
@@ -128,8 +128,8 @@ trainer:
     
     # cispo parameters (only used when policy_loss_type: "cispo")
     cispo:
-      clip_low: 0 # lower bound for importance sampling ratio clipping
-      clip_high: 5 # upper bound for importance sampling ratio clipping
+      cispo_eps_clip_low: 0 # offset for lower bound of importance sampling ratio clipping
+      cispo_eps_clip_high: 5 # offset for upper bound of importance sampling ratio clipping
 
 
   gradient_checkpointing: true
