[skyrl-train] update defaults for CISPO (#553)
updating cispo default clipping params to be 0 and 5 (prev was 0.2, 0.2)

this is per the scale-rl paper which ablated these
<img width="918" height="182" alt="image"
src="https://github.com/user-attachments/assets/06888622-16f9-4abf-9ab1-50661cbd0c45"
/>

now clip_ratio is higher
<img width="432" height="243" alt="image"
src="https://github.com/user-attachments/assets/b0216e35-5423-4170-8e87-3a6a8804a291"
/>

training on gsm8k looks normal: 
<img width="436" height="251" alt="image"
src="https://github.com/user-attachments/assets/2cb6e0be-8015-4b10-b869-3d1091edab51"
/>

--- a/skyrl-train/skyrl_train/config/ppo_base_config.yaml
+++ b/skyrl-train/skyrl_train/config/ppo_base_config.yaml
@@ -127,9 +127,9 @@ trainer:
       ppo_kl_coef: 1.0
     
     # cispo parameters (only used when policy_loss_type: "cispo")
-    cispo:
-      clip_low: 0.2 # lower bound for importance sampling ratio clipping
-      clip_high: 0.2 # upper bound for importance sampling ratio clipping
+    cispo: 
+      cispo_eps_clip_low: 0  # offset for lower bound of importance sampling ratio clipping (as opposed to PPO token update clipping)
+      cispo_eps_clip_high: 5 # offset for upper bound of importance sampling ratio clipping (as opposed to PPO token update clipping)
 
 
   gradient_checkpointing: true
