[skyrl-train][dependencies] separate vllm + megatron + bump vllm back to 0.11.0 + pin minimum uv version for extra-build-dependencies (#528)
## Separates vllm + megatron deps
After #481, there were some megatron flashinfer issues with --extra
vllm. This PR separates out the version of vllm that megatron relies on
from the general vllm version, allowing us to bump vllm to 0.11.0 for
the rest of the training stack.

## Update flash-attn installation
Updates flash-attn installation to use the `extra-build-dependencies`
feature from uv, requiring us to use a uv version >= 0.8.10. This
feature allows us to do the following, removing the need to deal with
markers + extras to specify a url source for each set of extras.

```
[tool.uv.extra-build-dependencies]
flash-attn = [{requirement = "torch", match-runtime = true}]

[tool.uv.extra-build-variables]
flash-attn = { FLASH_ATTENTION_SKIP_CUDA_BUILD = "TRUE"}

[project.optional-dependencies]
vllm = [
    "vllm==0.11.0",
    "flash-attn==2.8.3",
...
]
mcore = [
     "flash-attn==2.7.4.post1"
...
]
```

--- a/skyrl-train/pyproject.toml
+++ b/skyrl-train/pyproject.toml
@@ -45,6 +45,7 @@ dependencies = [
 ]
 
 [tool.uv]
+required-version = ">=0.8.10"
 conflicts = [
     [
         { extra = "vllm" },
@@ -61,22 +62,28 @@ conflicts = [
     ],
     [
         { extra = "mcore" },
+        { extra = "vllm" },
         { extra = "sglang" },
         { extra = "flashrl" },
     ]
 ]
 
+[tool.uv.extra-build-dependencies]
+flash-attn = [{requirement = "torch", match-runtime = true}]
+
+[tool.uv.extra-build-variables]
+flash-attn = { FLASH_ATTENTION_SKIP_CUDA_BUILD = "TRUE"}
+
 [tool.uv.sources]
 skyrl-gym = { path = "./skyrl-gym" , editable = true }
 torch = { index = "pytorch-cu128" }
 torchvision = { index = "pytorch-cu128" }
-flash-attn = { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.0.post2/flash_attn-2.8.0.post2+cu12torch2.7cxx11abiFALSE-cp312-cp312-linux_x86_64.whl" }
-# NOTE (sumanthrh): We explictly use a flashinfer wheel from their index.
-# The wheels on PyPI don't come with pre-compiled kernels and the package will JIT compile them at runtime which is slow.
-# additionally, different inference engines may pin different compatible flashinfer versions, so we provide the option to pin different versions for vllm/sglang
+# We use `flashinfer-jit-cache` to avoid slow JIT compilation on first run.
+# Different inference engines may pin different compatible flashinfer versions, so we provide the option to pin different versions for vllm/sglang
+flashinfer-jit-cache = { index = "flashinfer-cu128", marker = "extra == 'vllm'" }
 flashinfer-python = [
-    { url = "https://download.pytorch.org/whl/cu128/flashinfer/flashinfer_python-0.2.6.post1%2Bcu128torch2.7-cp39-abi3-linux_x86_64.whl", marker = "extra =='vllm'" },
-    { url = "https://download.pytorch.org/whl/cu128/flashinfer/flashinfer_python-0.2.6.post1%2Bcu128torch2.7-cp39-abi3-linux_x86_64.whl", marker = "extra == 'sglang' and extra != 'vllm'" }
+    { url = "https://download.pytorch.org/whl/cu128/flashinfer/flashinfer_python-0.2.6.post1%2Bcu128torch2.7-cp39-abi3-linux_x86_64.whl", marker = "extra == 'mcore' and extra != 'vllm'" },
+    { url = "https://download.pytorch.org/whl/cu128/flashinfer/flashinfer_python-0.2.6.post1%2Bcu128torch2.7-cp39-abi3-linux_x86_64.whl", marker = "extra == 'sglang' and extra != 'mcore' and extra != 'vllm'" }
 ]
 
 [project.optional-dependencies]
@@ -104,14 +111,17 @@ sandboxes = [
     "litellm[proxy]>=1.67.5",
 ]
 vllm = [
-    "vllm==0.10.1.1",
-    "torch==2.7.1",
+    "vllm==0.11.0",
+    "flash-attn==2.8.3",
+    "torch==2.8.0",
     "flashinfer-python",
+    "flashinfer-jit-cache",
     "torchvision"
 ]
 sglang = [
     "sglang[srt,openai,torch_memory_saver]==0.4.8.post1",  # 0.4.9.post1 causes non-colocate weight broadcast to hang
     "flashinfer-python",
+    "flash-attn==2.8.3",
     "torch==2.7.1",
     "torchvision",
 ]
@@ -126,12 +136,18 @@ mcore = [
   # export LD_LIBRARY_PATH="$CUDNN_PATH/lib:${LD_LIBRARY_PATH:-}"
   # uv pip install --no-build-isolation "transformer_engine[pytorch]==2.5.0" --verbose
   # "transformer-engine[pytorch]==2.5.0",
+  "flash-attn==2.7.4.post1",
+  "vllm==0.10.1.1",
+  "torch==2.7.1",
+  "flashinfer-python",
+  "torchvision",
   "mbridge==0.15.1",
   "megatron-core==0.13.0",
 ]
 flashrl = [
     # NOTE: Custom vLLM wheel must be installed separately.
     # See examples/flash_rl/README.md for installation instructions.
+    "flash-attn==2.8.3",
     "torch==2.7.0",
     "flashinfer-python",
     "torchvision",
@@ -146,6 +162,11 @@ miniswe = [
 [[tool.uv.index]]
 name = "pytorch-cu128"
 url = "https://download.pytorch.org/whl/cu128"
+explicit = true
+
+[[tool.uv.index]]
+name = "flashinfer-cu128"
+url = "https://flashinfer.ai/whl/cu128"
 explicit = true
 
 [tool.setuptools]
