--- a/skyrl-train/skyrl_train/config/ppo_base_config.yaml
+++ b/skyrl-train/skyrl_train/config/ppo_base_config.yaml
@@ -180,7 +180,7 @@ generator:
   inference_engine_tensor_parallel_size: 4
   inference_engine_pipeline_parallel_size: 1
   inference_engine_expert_parallel_size: 1
-  inference_engine_data_parallel_size: 1  # NOTE: dp_size>1 is not yet supported: https://github.com/NovaSky-AI/SkyRL/issues/202
+  inference_engine_data_parallel_size: 1
   n_samples_per_prompt: 5
   async_engine: true
   batched: false
