--- a/skyrl-train/pyproject.toml
+++ b/skyrl-train/pyproject.toml
@@ -125,7 +125,7 @@ mcore = [
   # export CPATH="$CUDNN_PATH/include:${CPATH:-}"
   # export LD_LIBRARY_PATH="$CUDNN_PATH/lib:${LD_LIBRARY_PATH:-}"
   # uv pip install --no-build-isolation "transformer_engine[pytorch]==2.5.0" --verbose
-  "transformer-engine[pytorch]==2.5.0",
+  # "transformer-engine[pytorch]==2.5.0",
   "mbridge==0.15.1",
   "megatron-core==0.13.0",
 ]
