[skyrl-train] Add YaRN support for VLLM and HF (#561)

--- a/skyrl-train/skyrl_train/config/ppo_base_config.yaml
+++ b/skyrl-train/skyrl_train/config/ppo_base_config.yaml
@@ -167,6 +167,14 @@ trainer:
   dump_data_batch: false
   dump_eval_results: true
 
+  # YaRN:
+  rope_scaling: null
+  rope_theta: null
+  # rope_scaling:
+  #   rope_type: yarn
+  #   factor: 1.0
+  #   original_max_position_embeddings: 32768
+
 
 generator:
   model_name: ${trainer.policy.model.path}
@@ -260,6 +268,10 @@ generator:
   # For each trajectory that exceeds the max length (i.e., truncated and does not end with an
   # EOS token), this masks out every token in the loss mask.
   apply_overlong_filtering: false
+
+  # rope parameters, can be optionally different from the trainer , useful in some cases like with thinking models.
+  rope_scaling: ${trainer.rope_scaling}
+  rope_theta: ${trainer.rope_theta}
 
 environment:
   env_class: "gsm8k"
